# ncx-infra-controller-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile-localdev.toml  Makefile-package.toml  Makefile.toml  README.md  STYLE_GUIDE.md  deny.toml
.github/workflows/: ci.yaml  publish-fern-docs.yml
bluefield/: Makefile.toml
bluefield/charts/carbide-fmds/: values.yaml
bluefield/charts/carbide-otelcol/: values.yaml
bluefield/containers/carbide-fmds/: Dockerfile
bluefield/containers/forge-dhcp-server/: Dockerfile
bluefield/containers/forge-dpu-agent/: Dockerfile
bluefield/containers/forge-dpu-otel-agent/: Dockerfile
bluefield/containers/otelcol-contrib/: Dockerfile
bluefield/misc/: local_bmc_dev
bluefield/misc/DEBIAN/: postinst
bluefield/otel/: otel-agent  otelcol-wrapper  otelcol-wrapper-imports  otelcol-wrapper-imports-dpf  otelcol-wrapper-validate
bluefield/otel/fileresourceprocessor/: config.go  factory.go  fileresourceprocessor.go  version.go
bluefield/otel/puntstatsreceiver/: config.go  factory.go  puntstatsreceiver.go  version.go
bluefield/otel/scripts/: otel_copy_certs.sh
bluefield/otel/site-controller/: otelcol-wrapper
bluefield/otel/telemetrystatsprocessor/: config.go  factory.go  telemetrystatsprocessor.go  version.go
book/src/: SUMMARY.md
book/src/architecture/: networking_integrations.md
book/src/manuals/: carbide-admin-cli.md  installation-guide.md  pushing_containers.md  site-setup.md
crates/admin-cli/: Cargo.toml
crates/admin-cli/src/: main.rs  rpc.rs
crates/agent/: Cargo.toml  example_agent_config.toml
crates/agent/src/: command_line.rs  dhcp.rs  dhcp_server_grpc_client.rs  ethernet_virtualization.rs  fmds_client.rs  instance_metadata_endpoint.rs  lib.rs  main_loop.rs  metadata_service.rs  netlink.rs  nvue.rs  util.rs
crates/agent/templates/: apt-clean  nvue_startup_etv.conf  nvue_startup_fnn.conf  update-ovs-pipe-size
crates/api/: Cargo.toml
crates/api-core/src/: api.rs  run.rs  setup.rs
crates/api-db/: Cargo.toml
crates/api-db/migrations/: 20260303120000_operating_systems.sql  20260303120001_instance_operating_system_id.sql  20260321120000_operating_systems.sql  20260321120000_os_status_uppercase.sql  20260322120001_switch_reprovisioning_requested.sql  20260323120000_expected_switch_host_mac_to_nvos_mac.sql  20260325181053_spdm_attestation.sql  20260423120000_expected_machines_host_lifecycle_profile.sql  20260427214705_host_network_config_use_admin_network.sql  (+2 more)
crates/api-db/src/: instance.rs  (+26 more)
crates/api-model/: Cargo.toml
crates/bmc-explorer-cli/: Cargo.toml
crates/bmc-mock/: Cargo.toml
crates/bmc-proxy/: Cargo.toml
crates/bmc-vendor/: Cargo.toml
crates/certs/: Cargo.toml
crates/dhcp-server/: Cargo.toml
crates/dpf/: Cargo.toml  build.rs
crates/dpu-agent-utils/: Cargo.toml
crates/dpu-fmds-shared/: Cargo.toml
crates/dpu-fmds-shared/src/: lib.rs  machine_identity.rs
crates/dpu-otel-agent/: Cargo.toml
crates/firmware/: Cargo.toml
crates/firmware/src/: artifact_cache.rs  downloader.rs  lib.rs
crates/firmware/src/tests/: config.rs  desired_firmware_versions.rs  downloader.rs
crates/fmds/: Cargo.toml
crates/health/: Cargo.toml
crates/host-support/: Cargo.toml
crates/ib-fabric/: Cargo.toml
crates/ipmi/: Cargo.toml
crates/ipxe-renderer/: Cargo.toml  README.md  templates.yaml
crates/libmlx/: Cargo.toml  build.rs
crates/libmlx-model/: Cargo.toml
crates/libnmxm/: Cargo.toml
crates/log-parser/: Cargo.toml
crates/machine-a-tron/: Cargo.toml
crates/machine-validation/: Cargo.toml
crates/metrics-endpoint/: Cargo.toml
crates/metrics-utils/: Cargo.toml
crates/metrics-utils/src/: lib.rs
crates/network/: Cargo.toml
crates/nras/: Cargo.toml
crates/nvlink-manager/: Cargo.toml
crates/nvue-client/: Cargo.toml
crates/preingestion-manager/: Cargo.toml
crates/pxe/: Cargo.toml
crates/redfish/: Cargo.toml
crates/rpc/: Cargo.toml  build.rs
crates/rpc-utils/: Cargo.toml
crates/scout/: Cargo.toml
crates/secrets/: Cargo.toml
crates/site-explorer/: Cargo.toml
crates/spancounter/: Cargo.toml
crates/ssh/: Cargo.toml
crates/ssh-console/: Cargo.toml
crates/state-controller/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: arch.rs  lib.rs
crates/uuid/: Cargo.toml
deploy/: DNS.md
deploy/files/: kea_config.json
dev/: kea-dhcp4.conf.example
dev/deployment/: kea-dhcp4-carbide.conf
dev/docker/: Dockerfile.build-artifacts-container-cross-aarch64  Dockerfile.build-container-aarch64  Dockerfile.carbide-api-localdev  Dockerfile.carbide-api-localdev.dockerignore  Dockerfile.pxe-build-container  Dockerfile.release-container-aarch64  Dockerfile.release-container-sa-x86_64  Dockerfile.release-container-x86_64  Dockerfile.release-forge-cli
dev/docker-env/: pdns-run
dev/ipmi/: mock_serial_console.py
docs/: README.md  bootable_artifacts.md  dpu-operations.md  faq.md  hcl.md  index.md  index.yml  release-notes.md
docs/architecture/: health_aggregation.md  redfish_workflow.md  state_handling.md
docs/development/: build-guide.md  issuer_ca_recreate.md  vm_pxe_client.md
docs/getting-started/: quick-start.md
docs/manuals/: building_nico_containers.md  network_isolation.md  nvlink_partitioning.md
docs/openapi/: spec.yaml
docs/overview/: capabilities.md  lifecycle.md  operational-principles.md  scope-and-boundaries.md  what-is-nico.md
docs/playbooks/: carbide_web_oauth2.md  ib_runbook.md
docs/provisioning/: host-validation.md  ingesting-hosts.md
fern/: docs.yml
flow/docs/: component-manager-architecture.md
helm-prereqs/: README.md  bootstrap_ssh_host_key.sh  clean.sh  preflight.sh  setup.sh  unseal_vault.sh  values.yaml
helm-prereqs/keycloak/: clean.sh  example.sh  get-token.sh  setup.sh
helm-prereqs/templates/: vault-config-job.yaml
helm/examples/: values-full.yaml
pxe/: Dockerfile  bfpxe
pxe/common_files/: load_modules.sh  scout-loader-rclocal
pxe/templates/: error  printcontext  pxe  user-data  whoami
rest-api/: AGENTS.md  Makefile
rest-api/openapi/: spec.yaml
rest-api/workflow-schema/: buf.gen.yaml
(+1033 files in other folders)
