#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-dpu-fmds-shared"
description = "Shared machine-identity and IMDS identity surface between carbide-agent and carbide-fmds"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "forge_dpu_fmds_shared"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
carbide-dpu-agent-utils = { path = "../dpu-agent-utils" }
carbide-rpc = { path = "../rpc" }
governor = { workspace = true }
reqwest = { default-features = false, features = [
  "rustls-tls",
], workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }

[lints]
workspace = true
