[package]
name = "carbide-firmware"
version = "0.0.1"
edition.workspace = true
description = "Carbide Firmware"
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_firmware"

[features]
default = []
test-support = ["dep:temp-dir", "dep:regex"]

[dependencies]
bmc-vendor = { path = "../bmc-vendor" }
carbide-api-model = { path = "../api-model", default-features = false }

# these are alphabetized
eyre = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
regex = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
temp-dir = { workspace = true, optional = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
carbide-test-support = { path = "../test-support" }
carbide-macros = { path = "../macros" }
carbide-api-db = { path = "../api-db", default-features = false }
sqlx = { workspace = true }
carbide-sqlx-testing = { path = "../sqlx-testing", default-features = false }

[lints]
workspace = true
