[package]
name = "carbide-metrics-utils"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
opentelemetry_sdk = { workspace = true }
glob = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
